# fastApi_learn

./: .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 19162e2abe1f_init_items.py  20251009_create_ppa_bundle_project_supply_points.py  20251010_add_project_id_to_supply_points.py  25bfd00998ba_merge_heads_after_created_at_default.py  4cdcfa48ce3e_add_ppa_bundle_project_tables.py  5c281855dfe4_add_project_id_to_supply_points.py  64cfbdb3686e_add_project_id_to_supply_points.py  6ddcdfb246a2_init_core_domain_tables.py  701c13325998_.py  abcd1234addserverdefault_add_server_default_created_at.py  f87c8c64ff32_init_core_domain_tables.py
src/app/: db.py  main.py  models.py  models_projects.py  schemas.py  schemas_ppa.py  schemas_ppa_quotations.py  schemas_projects.py  schemas_recontract.py  settings.py
src/app/api/: contracts.py  items.py  ppa_quotations.py  projects.py  recontract.py
src/app/scripts/: seed_ppa.py
src/app/tests/: test_health.py
