[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kumar Prashant", email = "kumar.prashant@qenest.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.37.0",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I"]  # sort imports

[tool.ruff.format]
quote-style = "double"
