[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-uv"              # the distribution name (can be anything)
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy[asyncio]",
  "asyncpg",
  "alembic",
]

# IMPORTANT: Tell Hatch which code to package (your app lives in src/app)
[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# (optional but nice) Include these in source distributions
[tool.hatch.build.targets.sdist]
include = [
  "src/app",
  "alembic",
  "alembic.ini",
  "pyproject.toml",
  "README.md",
]
